tests/checker/diagnostics/0145_adt_record_field_int_bool_03.ml.infer.expected
File "0145_adt_record_field_int_bool_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0145_adt_record_field_int_bool_03 is not a valid module name.

File "0145_adt_record_field_int_bool_03.ml", line 2, characters 30-34:
2 | let _ : rec_gamma = { count = true; flag = true }
                                  ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
